--- a/index.html
+++ b/index.html
@@ -1,69 +1,32 @@
 <!DOCTYPE html>
-<html>
-
 <head>
-    <meta charset="utf-8">
-    <title>NBA player GIF library</title>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
-        crossorigin="anonymous">
-    <link rel="stylesheet" type="text/css" href="style.css">
-
+    <title>Giphy API</title>
+    <script src="https://code.jquery.com/jquery-3.3.1.js"
+   integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60=" crossorigin="anonymous"></script>
+   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+   <link href="https://fonts.googleapis.com/css?family=Squada+One" rel="stylesheet">
+   <link rel="stylesheet" href="assets\style.css"/> 
 </head>
+<body>
+    <h1>NBA Player GIF Library</h1>
 
-<body class="bg-secondary">
-    <div class="container">
-        <div class="row">
-
-            <div class="col-lg-12 mb-4 bg-light rounded">
-                <h1 class="text-center">NBA player GIF's!</h1>
-            </div>
-
-            <div class="col-lg-9">
-                <div class="btn-toolbar">
-                    <button type="button" class="artist btn btn-warning text-white" id="LeBron James">LeBron James</button>
-                    <button type="button" class="artist btn btn-dark" id="Kobe Bryant">Kobe Bryant</button>
-                    <button type="button" class="artist btn btn-danger" id="Carmelo Anthony">Carmelo Anthony</button>
-                    <button type="button" class="artist btn btn-primary" id="Russell Westbrook">Russell Westbrook</button>
-                    <button type="button" class="artist btn btn-success" id="Kyrie Irving">Kyrie Irving</button>
-                </div>
-                <div>
-                    <h3 class="text-light">Add your favorite NBA player below:</h3>
-                    <br>
-                    <form id="artist-form">
-                        <label for="artist-input"></label>
-                        <input type="text" id="artist-input">
-                        <br>
-                        <br>
-                        <br>
-                        <button id="add-player" type="button" class="btn btn-outline-light" value="submit">Add Button</button>
-                        <button id="favoritesBtn" type="button" class="btn btn-outline-light" value="submit">Make Favorites</button>
-
-                    </form>
-                    <div id="message"></div>
-                </div>
-            </div>
-
-            <div class="col-lg-3">
-                <div class="card" style="width: 18rem;">
-                    <div class="card-body bg-success">
-                        <h3 class="card-text text-center">3 Favorites</h3>
-                        <ul id="favorites" class="list-group list-group-flush">
-
-                        </ul>
-                    </div>
-                </div>
-            </div>
-
-        </div>
-
-        <div id="gifs-appear-here"></div>
-
+    <div id="playerButtons">
+		
     </div>
+    
+    <form>
+            <input id="addPlayers" name="favorite-player" placeholder="Add Your Favorite Player" type="text"> 
+				<input id="submit" type="submit" class="btn btn-dark">		
+        
+        </form>
+		<br>
+		<br>
+          <div id="jumbotron" class="jumbotron container">
+                <div id="playerImg">
 
-
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-    <script src="logic.js"></script>
-
+                </div>
+          </div> 
+    	<script type="text/javascript" src="assets\logic.js"></script>
 </body>
-
 </html>
